<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/joke_item_margin"
    android:paddingRight="@dimen/joke_item_margin"
    android:paddingTop="@dimen/joke_item_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_list_item_normal_daytime"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/joke_item_margin" >

                <TextView
                    
                    android:id="@id/joke_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:lineSpacingMultiplier="1.4"
                    android:textColor="@color/deep_text"
                    android:textSize="18.0sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/list_item_separator" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:id="@id/joke_btn_favorites"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" >

                    <TextView
                        android:id="@id/joke_text_favorites"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableLeft="@drawable/ic_list_item_favorites"
                        android:drawablePadding="5.0dip"
                        android:text="@string/favourites"
                        android:textColor="@color/list_item_btn_txt" />
                </RelativeLayout>

                <View
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:background="@color/list_item_separator" />

                <RelativeLayout
                    android:id="@id/joke_btn_copy"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" >

                    <TextView
                        android:id="@id/joke_text_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableLeft="@drawable/ic_list_item_copy"
                        android:drawablePadding="5.0dip"
                        android:text="@string/copy"
                        android:textColor="@color/list_item_btn_txt" />
                </RelativeLayout>

                <View
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:background="@color/list_item_separator" />

                <RelativeLayout
                    android:id="@id/joke_btn_share"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" >

                    <TextView
                        android:id="@id/joke_text_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableLeft="@drawable/ic_list_item_share"
                        android:drawablePadding="5.0dip"
                        android:text="@string/share"
                        android:textColor="@color/list_item_btn_txt" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>